--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -6,7 +6,7 @@
   </head>
   <body>
       <h1>Enter Puppy Info below</h1>
-      <form action="POST" name="/">
+      <form method="POST" action="/">
         Name: <input type="text" name="name"><br>
         Breed: <input type="text" name="breed"><br>
         Age: <input type="text" name="age"><br>
