--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,6 @@
     <title>Puppy Finder</title>
   </head>
   <body>
-      <h1 href="/create_puppy">Click Here To List A Puppy</h1>
+      <h1 href="views/create_puppy">Click Here To List A Puppy</h1>
   </body>
 <html>
