automatically backed up by learn

--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -11,7 +11,7 @@
         Name: <input type="text" name="name"><br>
         Breed: <input type="text" name="breed"><br>
         Age: <input type="text" name="age"><br>
-        <input id="submit" name="submit">
+        <input value="submit" id="submit" name="submit">
       </form>
   </body>
 <html>
