--- a/views/display_puppy.erb
+++ b/views/display_puppy.erb
@@ -6,8 +6,8 @@
   </head>
   <body>
       <h1>Puppy Info Below</h1>
-        <h2>Name: <%=@name%></h2>
-        <h2>Breed: <%=@breed%></h2>
-        <h2>Age: <%=@age%></h2>
+        <h2>Puppy Name: <%=@name%></h2>
+        <h2>Puppy Breed: <%=@breed%></h2>
+        <h2>Puppy Age: <%=@age%></h2>
   </body>
 <html>
